Fix ara tooltip alignment

--- a/webapp/app/static/css/app.css
+++ b/webapp/app/static/css/app.css
@@ -182,7 +182,7 @@ body {
 /* Area chart style */
 .line {
   fill: none;
-  stroke: #999;
+  stroke: #666;
   stroke-width: 1.5px;
 }
 
